# cortex_agent

./: -  .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LICENSE  PERCEPTION_MODIFICATION_REPORT.txt  README.md  VERSION  docker-compose.yml  install.ps1  install.sh  pyinstaller.spec  pyproject.toml  requirements-dev.txt  requirements.txt  test_control_mode.py
api/: __init__.py  auth.py  errors.py  main.py
cli_tui/: QUICKSTART.md  TUI_IMPROVEMENTS.md  __init__.py  app.py  commands.py  main.py  state.py  version_check.py
config/: __init__.py  attention_config.py  memory_config.py  model_config.py  output_config.py  plugin_config.py  project_guidelines.yaml  settings.py
cortex/: __init__.py  main.py  version.py  version_manager.py
docker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
docker/searxng/: settings.yml
docs/: API_REQUIREMENTS.md  APP_TOOLS_COMPARISON.md  ARCHITECTURE.md  CODE_QUALITY.md  CONFIG_VALUE_EVOLUTION.md  INSTALLATION.md  KNOWN_ISSUES.md  OPENSOURCE_INTRO.md  OPEN_APP_TOOL_INTEGRATION.md  PERCEPTION_CONFIG.md  PLUGIN_SYSTEM.md  QUICK_START_OPEN_APP.md  expert_cli_mode.md
examples/: attention_v2_demo.py  attention_v2_integration_demo.py  perception_output_demo.py
frontend/: README.md
infra/: __init__.py
modules/: __init__.py
scripts/: -  ..--oPtu  __init__.py  build.bat  build.sh  build_memory_index.py  cleanup_data.py  deploy.py  index.html  nul  setup_models.py  start_all.py  stop_all.py  style.css
skills/: architecture_design.yaml  chrome_search.yaml  code_review.yaml  problem_diagnosis.yaml
tests/: conftest.py  test_api.py  test_blackboard.py  test_compression.py  test_config.py  test_config_validation.py  test_control_mode.py  test_database.py  test_expert_cli_mode.py  test_expert_system_integration.py  test_identity.py  test_learn_mode.py  test_mcp_system.py  test_memory_manager.py  (+15 more)
(+429 files in other folders)
