[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-agent"
dynamic = ["version"]
description = "Cortex Agent — 类人智能后端系统"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Cortex Agent"}]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0",
    "aiohttp>=3.9.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.1",
    "numpy>=1.24.0",
    "textual>=8.0.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "mss>=10.0.0",
    "rapidocr_onnxruntime>=1.2.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.1.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
cortex = "cortex.main:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["cortex*", "api*", "cli_tui*", "config*", "infra*", "modules*", "utils*", "scripts*"]
exclude = ["tests*", "docs*", "Open-ClaudeCode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
